Fixed spacing hope it works lol

--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ body {
 .navbar {
   background: #D9D9D9; 
     font-family: "Poppins", sans-serif; 
-    padding: 15px 20px;
+    padding: 20px 40px;
     border-radius: 5px;
-    margin: 10px auto 20px auto; 
+    margin: 15px auto 25px auto; 
     width: fit-content;   
     display: block;
 }
@@ -87,7 +87,7 @@ body {
   color: #000000;
   font-size: 20px;
   font-weight: 500;
-  margin-right: 25px;
+  margin-right: 30px;
   padding: 5px 10px;
   text-decoration: none;;
 }
